UI updates and fixes
- fixes bug in updating SMS log when new SMS is sent using test form
- fixes horizontal scroll showing up on sms log table

--- a/dashboard/assets/css/style.css
+++ b/dashboard/assets/css/style.css
@@ -32,3 +32,7 @@ body {
 .legend table {
   border-spacing: 5px;
 }
+
+.table-responsive .row {
+  margin: 0px;
+}
